--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Remake Barber - Contact</title>
-	<link rel="icon" href="./static/img/favicon.png" type="image/png">
+	<link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png">
 
 
-  <link rel="stylesheet" href="./static/styles.min.css">
+  <link rel="stylesheet" href="{% static 'styles.min.css' %}">
 </head>
 <body>
   <!--================Header Menu Area =================-->
@@ -17,7 +18,7 @@
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container box_1620">
           <!-- Brand and toggle get grouped for better mobile display -->
-          <a class="navbar-brand logo_h" href="index.html"><img src="./static/img/logo.png" alt=""></a>
+          <a class="navbar-brand logo_h" href="index.html"><img src="{% static 'img/logo.png' %}" alt=""></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -199,6 +200,6 @@
   </footer>
   <!--================ End Footer Area =================-->
 
-  <script src="./static/scripts.js"></script>
+  <script src="{% static 'scripts.js' %}"></script>
 </body>
 </html>
