--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,11 @@
             <div class="flex-fill" style="margin-right: 30px;">
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
-                  <img class="card-img rounded-0" src="{{ post.image_url }}" alt="">
+                  {% if post.image_url %}
+                    <img class="card-img rounded-0" src="{{ post.image_url }}" alt="">
+                  {% else %}
+                    <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="">
+                  {% endif %}
                 </div>
                 <div class="blog__slide__content">
                   <h3><a href="#">{{ post.title }}</a></h3>
@@ -119,6 +123,33 @@
 
     <!--================ Start Blog Post Area =================-->
     <section class="blog-post-area section-margin mt-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8">
+            {% for post in fresh_posts %}
+              <div class="single-recent-blog-post">
+                <div class="thumb">
+                  {% if post.image_url %}
+                    <img class="img-fluid" src="{{ post.image_url }}" alt="">
+                  {% else %}
+                    <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+                  {% endif %}
+                  <ul class="thumb-info">
+                    <li><a href="#"><i class="ti-user"></i>{{ post.author }}</a></li>
+                    <li><a href="#"><i class="ti-notepad"></i>{{ post.published_at }}</a></li>
+                    <li><a href="#"><i class="ti-themify-favicon"></i>{{ post.comments_amount }}</a></li>
+                  </ul>
+                </div>
+                <div class="details mt-20">
+                  <h3>{{ post.title }}</h3>
+                  <p>{{ post.text }}</p>
+                  <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
+                </div>
+              </div>
+            {% endfor %}
+          </div>
+        </div>
+      </div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
