--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,7 @@
                   {% else %}
                     <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
                   {% endif %}
-                  <ul class="thumb-info">
+                  <ul  style="max-width: 550px;" class="thumb-info">
                     <li><a href="#"><i class="ti-user"></i>{{ post.author }}</a></li>
                     <li><a href="#"><i class="ti-notepad"></i>{{ post.published_at }}</a></li>
                     <li><a href="#"><i class="ti-themify-favicon"></i>{{ post.comments_amount }}</a></li>
@@ -216,9 +216,7 @@
                 <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
               </div>
             </div>
-
-            
-
+    
             <div class="row">
               <div class="col-lg-12">
                   <nav class="blog-pagination justify-content-center d-flex">
