--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -68,6 +68,92 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8">
+          <div class="main_blog_details">
+            {% if post.image_url %}
+              <img class="img-fluid" src="{{ post.image_url }}" alt="">
+            {% else %}
+              <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+            {% endif %}
+            <h4>{{ post.title }}</h4>
+            <div class="user_details">
+              <div class="mt-sm-0 mt-3">
+                <div class="media">
+                  <div class="media-body">
+                    <h5>{{ post.author }}</h5>
+                    <p>{{ post.published_at }}</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <p>{{ post.text }}</p>
+            <div class="news_d_footer flex-column flex-sm-row">
+              <a href="#"><span class="align-middle mr-2"><i class="ti-heart"></i></span>{{ post.likes_amount }}</a>
+              <a class="justify-content-sm-center ml-sm-auto mt-sm-0 mt-2" href="#"><span class="align-middle mr-2"><i class="ti-themify-favicon"></i></span>03 Comments</a>
+              <div class="news_socail ml-sm-auto mt-sm-0 mt-2">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-dribbble"></i></a>
+                <a href="#"><i class="fab fa-behance"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="comments-area">
+            <h4>03 Comments</h4>
+            <div class="comment-list">
+              <div class="single-comment justify-content-between d-flex">
+                <div class="user justify-content-between d-flex">
+                  <div class="desc">
+                    <h5><a href="#">Emilly Blunt</a></h5>
+                    <p class="date">December 4, 2017 at 3:12 pm </p>
+                    <p class="comment">
+                      Never say goodbye till the end comes!
+                    </p>
+                  </div>
+                </div>
+                <div class="reply-btn">
+                  <a href="" class="btn-reply text-uppercase">reply</a> 
+                </div>
+              </div>
+            </div>	
+            <div class="comment-list">
+              <div class="single-comment justify-content-between d-flex">
+                <div class="user justify-content-between d-flex">
+                  <div class="desc">
+                    <h5><a href="#">Maria Luna</a></h5>
+                    <p class="date">December 4, 2017 at 3:12 pm </p>
+                    <p class="comment">
+                      Never say goodbye till the end comes!
+                    </p>
+                  </div>
+                </div>
+                <div class="reply-btn">
+                  <a href="" class="btn-reply text-uppercase">reply</a> 
+                </div>
+              </div>
+            </div>	
+            <div class="comment-list">
+              <div class="single-comment justify-content-between d-flex">
+                <div class="user justify-content-between d-flex">
+                  <div class="desc">
+                    <h5><a href="#">Ina Hayes</a></h5>
+                    <p class="date">December 4, 2017 at 3:12 pm </p>
+                    <p class="comment">
+                    Never say goodbye till the end comes!
+                    </p>
+                  </div>
+                </div>
+                <div class="reply-btn">
+                  <a href="" class="btn-reply text-uppercase">reply</a> 
+                </div>
+              </div>
+            </div>	                                             				
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8">
             <div class="main_blog_details">
                 <img class="img-fluid" src="{% static 'img/blog/blog4.png' %}" alt="">
                 <h4>Cartridge Is Better Than Ever <br /> A Discount Toner</h4>
