--- a/templates/index.html
+++ b/templates/index.html
@@ -143,7 +143,7 @@
                 <div class="details mt-20">
                   <h3>{{ post.title }}</h3>
                   <p>{{ post.text|truncatechars:200 }}</p>
-                  <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
+                  <a class="button" href="{% url 'post_detail' slug=post.slug %}">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
             {% endfor %}
