--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 {% load static %}
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Remake Barber - Blog Details</title>
-	<link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png">
-
-  <link rel="stylesheet" href="{% static 'styles.min.css '%}">
-</head>
-<body>
-  <!--================Header Menu Area =================-->
+{% block body %}
   <header class="header_area">
     <div class="main_menu">
       <nav class="navbar navbar-expand-lg navbar-light">
@@ -196,5 +185,4 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
   <!--================ End Footer Area =================-->
 
   <script src="{% static 'scripts.js' %}"></script>
-</body>
-</html>
+{% endblock %}
