--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 {% load static %}
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Remake Barber - Contact</title>
-	<link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png">
-
-
-  <link rel="stylesheet" href="{% static 'styles.min.css' %}">
-</head>
-<body>
-  <!--================Header Menu Area =================-->
+{% block body %}
   <header class="header_area">
     <div class="main_menu">
       <nav class="navbar navbar-expand-lg navbar-light">
@@ -66,7 +54,7 @@
   <section class="section-margin--small section-margin">
     <div class="container">
       <div class="d-none d-sm-block mb-5 pb-4">
-        Тут будет карта
+        {{ html_map|safe }}
       </div>
 
 
@@ -201,5 +189,4 @@
   <!--================ End Footer Area =================-->
 
   <script src="{% static 'scripts.js' %}"></script>
-</body>
-</html>
+{% endblock %}
