--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}{{ block.super }} - Contact{% endblock %}
 {% block content %}
   <!--================Header Menu Area =================-->
   
