--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -29,9 +29,9 @@
         <div class="col-lg-8">
           <div class="main_blog_details">
             {% if post.image_url %}
-              <img class="img-fluid" src="{{ post.image_url }}" alt="">
+              <img class="img-fluid" src="{{ post.image_url }}" alt="Фото поста">
             {% else %}
-              <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+              <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="Бритвенные принадлежности">
             {% endif %}
             <h4>{{ post.title }}</h4>
             <div class="user_details">
