--- a/templates/index.html
+++ b/templates/index.html
@@ -27,9 +27,9 @@
             <div class="card blog__slide text-center">
               <div class="blog__slide__img">
                 {% if post.image_url %}
-                  <img class="card-img rounded-0" src="{{ post.image_url }}" alt="">
+                  <img class="card-img rounded-0" src="{{ post.image_url }}" alt="Фото поста">
                 {% else %}
-                  <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="">
+                  <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="Бритвенные принадлежности">
                 {% endif %}
               </div>
               <div class="blog__slide__content">
@@ -46,7 +46,7 @@
         <div class="flex-fill" style="margin-right: 30px;">
           <div class="card blog__slide text-center">
             <div class="blog__slide__img">
-              <img class="card-img rounded-0" src="{% static 'img/blog/blog-slider/blog-slide1.png' %}" alt="">
+              <img class="card-img rounded-0" src="{% static 'img/blog/blog-slider/blog-slide1.png' %}" alt="Сумка">
             </div>
             <div class="blog__slide__content">
               <h3><a href="#">New york fashion week's continued the evolution</a></h3>
@@ -58,7 +58,7 @@
         <div class="flex-fill" style="margin-right: 30px;">
           <div class="card blog__slide text-center">
             <div class="blog__slide__img">
-              <img class="card-img rounded-0" src="{% static 'img/blog/blog-slider/blog-slide2.png' %}" alt="">
+              <img class="card-img rounded-0" src="{% static 'img/blog/blog-slider/blog-slide2.png' %}" alt="Девушка в горах">
             </div>
             <div class="blog__slide__content">
               <h3><a href="#">New york fashion week's continued the evolution</a></h3>
@@ -69,7 +69,7 @@
         <div class="flex-fill">
           <div class="card blog__slide text-center">
             <div class="blog__slide__img">
-              <img class="card-img rounded-0" src="{% static 'img/blog/blog-slider/blog-slide3.png' %}" alt="">
+              <img class="card-img rounded-0" src="{% static 'img/blog/blog-slider/blog-slide3.png' %}" alt="Мужчина">
             </div>
             <div class="blog__slide__content">
               <h3><a href="#">New york fashion week's continued the evolution</a></h3>
@@ -91,9 +91,9 @@
             <div class="single-recent-blog-post">
               <div class="thumb">
                 {% if post.image_url %}
-                  <img class="img-fluid" src="{{ post.image_url }}" alt="">
+                  <img class="img-fluid" src="{{ post.image_url }}" alt="url изображения поста">
                 {% else %}
-                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+                  <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="бритвенные принадлежности">
                 {% endif %}
                 <ul  style="max-width: 550px;" class="thumb-info">
                   <li><a href="#"><i class="ti-user"></i>{{ post.author }}</a></li>
@@ -116,7 +116,7 @@
         <div class="col-lg-8">
           <div class="single-recent-blog-post">
             <div class="thumb">
-              <img class="img-fluid" src="{% static 'img/blog/blog1.png' %}" alt="">
+              <img class="img-fluid" src="{% static 'img/blog/blog1.png' %}" alt="Фотограф">
               <ul class="thumb-info">
                 <li><a href="#"><i class="ti-user"></i>Admin</a></li>
                 <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
@@ -132,7 +132,7 @@
 
           <div class="single-recent-blog-post">
             <div class="thumb">
-              <img class="img-fluid" src="{% static 'img/blog/blog2.png'%}" alt="">
+              <img class="img-fluid" src="{% static 'img/blog/blog2.png'%}" alt="Собака">
               <ul class="thumb-info">
                 <li><a href="#"><i class="ti-user"></i>Admin</a></li>
                 <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
@@ -148,7 +148,7 @@
 
           <div class="single-recent-blog-post">
             <div class="thumb">
-              <img class="img-fluid" src="{% static 'img/blog/blog3.png '%}" alt="">
+              <img class="img-fluid" src="{% static 'img/blog/blog3.png '%}" alt="Байкер">
               <ul class="thumb-info">
                 <li><a href="#"><i class="ti-user"></i>Admin</a></li>
                 <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
@@ -164,7 +164,7 @@
 
           <div class="single-recent-blog-post">
             <div class="thumb">
-              <img class="img-fluid" src="{% static 'img/blog/blog4.png' %}" alt="">
+              <img class="img-fluid" src="{% static 'img/blog/blog4.png' %}" alt="Лодка">
               <ul class="thumb-info">
                 <li><a href="#"><i class="ti-user"></i>Admin</a></li>
                 <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
